tests/test_assets/semantic/invalid/enums/cross_type_comparison.cog
Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

OtherEnum :: enum(u16) {
    Red,
}

Color.Red == OtherEnum.Red;
Color.Blue < OtherEnum.Red;
