tests/test_assets/semantic/invalid/enums/cross_type_comparison.expected
semantic error at line 11: comparison type mismatch
semantic error at line 12: ordered comparison requires numeric operands
2 semantic errors generated.
